--- a/public/consulting.html
+++ b/public/consulting.html
@@ -45,7 +45,7 @@
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
 		<a href="/#features">Features</a>
-		<a href="/screen-shoots">Screen shots</a>
+		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
@@ -67,7 +67,7 @@
 
 	<section>
 		<h1>Consulting fee</h1>
-		<p class="tagline">We usually have fixed prices for our projects because it is easier for our customers to make a budget.</p>
+		<p class="tagline">We usually have fixed prices for our projects because it is easier for customers to handle.</p>
 		<p class="tagline">We will agree on a price after initial discussions.</p>
 	</section>
 
