--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
 		<a href="/#features">Features</a>
-		<a href="/screen-shoots">Screen shots</a>
+		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
@@ -180,7 +180,7 @@ Available n the app store.
 			<h2>Bioinformatics consulting</h2>
 			<div>
 				Amber biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
-				Amber biosciences was founded in 2008 as a bioinformarics consulting company by reseachers from Lund University.
+				Amber biosciences was founded in 2008 as a bioinformatics consulting company by reseachers from Lund University.
 			</div>
 		</div>
 		<div class="column">
@@ -200,7 +200,7 @@ Available n the app store.
 		<div class="column">
 			<h2>Who we are</h2>
 			<div>
-				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt. Later, Elias Moberger joined.<br><br>
+				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt in Lund, Sweden. Later, Elias Moberger joined.<br><br>
 				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
 			</div>
 		</div>
