--- a/public/manual.html
+++ b/public/manual.html
@@ -45,7 +45,7 @@
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
 		<a href="/#features">Features</a>
-		<a href="/screen-shoots">Screen shots</a>
+		<a href="/screen-shots">Screen shots</a>
 		<a href="/manual">Manual</a>
 		<a href="/#support">Support</a>
 		<a href="/#feedback">Feedback</a>
