--- a/public/manual.html
+++ b/public/manual.html
@@ -65,7 +65,7 @@
       The Amberbio app allows scientists to analyze and visualize data sets, in particular biomedical data, on mobile devices. All calculations are performed directly on the device and all data is stored locally. The functionality should be evident from the user interface and it is not necessary to read the manual to use the app. The manual gives a high level overview of the app and explains some important details that are not clear from the user interface such as some mathematical details.
     </p>
     <p>
-      This manual can also be found on the web at <a href="http://www.amberbio.com">Amberbio</a>.
+      This manual is available in the app and on the web at <a href="http://www.amberbio.com/manual">www.amberbio.com/manual</a>.
     </p>
   </section>
 
