--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -65,7 +65,6 @@
 
 <article>
   <section>
-    <h1>Screen shots of the Amberbio app</h1>
 
     <div class="container">
       <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
@@ -81,24 +80,23 @@
 	<div class="carousel-inner" role="listbox">
 
 	  <div class="item active">
-            <img src="img/navigation.png" alt="Chania">
+            <img src="img/navigation.png">
             <div class="carousel-caption">
               <h3>Navigation</h3>
             </div>
 	  </div>
 
 	  <div class="item">
-            <img src="img/import-data.jpg" alt="Chania" width="460" height="345">
+            <img src="img/import-data.jpg">
             <div class="carousel-caption">
               <h3>Import of data</h3>
             </div>
 	  </div>
 	  
 	  <div class="item">
-            <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+	    <img src="img/anova-table.jpg">
             <div class="carousel-caption">
-              <h3>Flowers</h3>
-              <p>Beatiful flowers in Kolymbari, Crete.</p>
+              <h3>Anova</h3>
             </div>
 	  </div>
 
@@ -125,29 +123,11 @@
     </div>
 
 
-
-
-
-    
-
-
 <!--
-
-    <div class="thumbnails">
-
-      <div class="thumbnail">
-      <h2>Navigation</h2>
-      <img src="img/navigation.jpg" alt="navigation">
-      </div>
-
-      <div class="thumbnail">
-	<h2>Import</h2>
-	<img src="img/import-data.jpg" alt="import data">
-      </div>
 
       <div class="thumbnail">
 	<h2>Anova</h2>
-	<img src="img/anova-table.jpg" alt="import data">
+
       </div>
 
       <div class="thumbnail">
