--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -74,6 +74,10 @@
 	  <li data-target="#myCarousel" data-slide-to="1"></li>
 	  <li data-target="#myCarousel" data-slide-to="2"></li>
 	  <li data-target="#myCarousel" data-slide-to="3"></li>
+	  <li data-target="#myCarousel" data-slide-to="4"></li>
+	  <li data-target="#myCarousel" data-slide-to="5"></li>
+	  <li data-target="#myCarousel" data-slide-to="6"></li>
+	  <li data-target="#myCarousel" data-slide-to="7"></li>
 	</ol>
 
 	<!-- Wrapper for slides -->
@@ -101,44 +105,31 @@
 	  </div>
 
 	  <div class="item">
-            <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+	    <img src="img/factor-association.jpg">
             <div class="carousel-caption">
-              <h3>Flowers</h3>
-              <p>Beatiful flowers in Kolymbari, Crete.</p>
+	      <h3>Factor associations</h3>
             </div>
 	  </div>
+
+	  <div class="item">
+	    <img src="img/missing-values.jpg">
+            <div class="carousel-caption">
+	      <h3>Missing values</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/project-notes.jpg">
+            <div class="carousel-caption">
+	      <h3>Project notes</h3>
+            </div>
+	  </div>
+
+
 	  
-	</div>
-
-	<!-- Left and right controls -->
-	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-	  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-	  <span class="sr-only">Previous</span>
-	</a>
-	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-	  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-	  <span class="sr-only">Next</span>
-	</a>
-      </div>
-    </div>
-
 
 <!--
 
-      <div class="thumbnail">
-	<h2>Anova</h2>
-
-      </div>
-
-      <div class="thumbnail">
-	<h2>Factor associations</h2>
-	<img src="img/factor-association.jpg" alt="import data">
-      </div>
-
-      <div class="thumbnail">
-	<h2>Missing values</h2>
-	<img src="img/missing-values.jpg" alt="import data">
-      </div>
 
       <div class="thumbnail">
 	<h2>Project notes</h2>
@@ -209,6 +200,21 @@ pca-2d.jpg
 pca-3d.jpg
 
 -->
+
+	</div>
+
+	<!-- Left and right controls -->
+	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	  <span class="sr-only">Next</span>
+	</a>
+      </div>
+    </div>
+
 
 
 
