--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -78,6 +78,20 @@
 	  <li data-target="#myCarousel" data-slide-to="5"></li>
 	  <li data-target="#myCarousel" data-slide-to="6"></li>
 	  <li data-target="#myCarousel" data-slide-to="7"></li>
+	  <li data-target="#myCarousel" data-slide-to="8"></li>
+	  <li data-target="#myCarousel" data-slide-to="9"></li>
+	  <li data-target="#myCarousel" data-slide-to="10"></li>
+	  <li data-target="#myCarousel" data-slide-to="11"></li>
+	  <li data-target="#myCarousel" data-slide-to="12"></li>
+	  <li data-target="#myCarousel" data-slide-to="13"></li>
+	  <li data-target="#myCarousel" data-slide-to="14"></li>
+	  <li data-target="#myCarousel" data-slide-to="15"></li>
+	  <li data-target="#myCarousel" data-slide-to="16"></li>
+	  <li data-target="#myCarousel" data-slide-to="17"></li>
+	  <li data-target="#myCarousel" data-slide-to="18"></li>
+	  <li data-target="#myCarousel" data-slide-to="19"></li>
+	  <li data-target="#myCarousel" data-slide-to="20"></li>
+	  <li data-target="#myCarousel" data-slide-to="21"></li>
 	</ol>
 
 	<!-- Wrapper for slides -->
@@ -112,6 +126,20 @@
 	  </div>
 
 	  <div class="item">
+	    <img src="img/multiple-molecule-plots.jpg">
+            <div class="carousel-caption">
+	      <h3>Multiple molecule plots</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/factor-chart.jpg">
+            <div class="carousel-caption">
+	      <h3>Factor chart</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
 	    <img src="img/missing-values.jpg">
             <div class="carousel-caption">
 	      <h3>Missing values</h3>
@@ -119,87 +147,109 @@
 	  </div>
 
 	  <div class="item">
-	    <img src="img/project-notes.jpg">
+	    <img src="img/factor-summary.jpg">
             <div class="carousel-caption">
-	      <h3>Project notes</h3>
+	      <h3>Factor summary</h3>
             </div>
 	  </div>
 
+	  <div class="item">
+	    <img src="img/data-set-summary.jpg">
+            <div class="carousel-caption">
+	      <h3>Data set summary</h3>
+            </div>
+	  </div>
 
-	  
+	  <div class="item">
+	    <img src="img/filter-molecules.jpg">
+            <div class="carousel-caption">
+	      <h3>Filter molecules</h3>
+            </div>
+	  </div>
 
-<!--
+	  <div class="item">
+	    <img src="img/p-value-histogram.jpg">
+            <div class="carousel-caption">
+	      <h3>P-value histogram</h3>
+            </div>
+	  </div>
 
+	  <div class="item">
+	    <img src="img/sample-normalization.jpg">
+            <div class="carousel-caption">
+	      <h3>Sample normalization</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Project notes</h2>
-	<img src="img/project-notes.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/data-set-table.jpg">
+            <div class="carousel-caption">
+	      <h3>Data set table</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Factor chart</h2>
-	<img src="img/factor-chart.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/hierarchical-clustering.jpg">
+            <div class="carousel-caption">
+	      <h3>Hierarchical clustering</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Remove molecules</h2>
-	<img src="img/remove-molecules.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/paired-test-plot.jpg">
+            <div class="carousel-caption">
+	      <h3>Paired test plot</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Color selection</h2>
-	<img src="img/color-selection.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/single-molecule-plots.jpg">
+            <div class="carousel-caption">
+	      <h3>Single molecule plots</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Factor elimination</h2>
-	<img src="img/factor-elimination.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/edit-factor.jpg">
+            <div class="carousel-caption">
+	      <h3>Edit factor</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Multiple molecule plots</h2>
-	<img src="img/multiple-molecule-plots.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/pairwise-test.jpg">
+            <div class="carousel-caption">
+	      <h3>Pairwise test</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Remove samples</h2>
-	<img src="img/remove-samples.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/linear-regression.jpg">
+            <div class="carousel-caption">
+	      <h3>Linear regression</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Data set selection</h2>
-	<img src="img/data-set-selection.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/pca-2d.jpg">
+            <div class="carousel-caption">
+	      <h3>2D principal componenent analysis</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Factor summary</h2>
-	<img src="img/factor-summary.jpg" alt="import data">
-      </div>
+	  <div class="item">
+	    <img src="img/pca-3d.jpg">
+            <div class="carousel-caption">
+	      <h3>3D principal componenent analysis</h3>
+            </div>
+	  </div>
 
-      <div class="thumbnail">
-	<h2>Anova</h2>
-	<img src="img/anova-table.jpg" alt="import data">
-      </div>
-
-sample-names.jpg
-    data-set-summary.jpg
-filter-molecules.jpg
-p-value-histogram.jpg
-sample-normalization.jpg
-    data-set-table.jpg
-hierarchical-clustering.jpg
-paired-test-plot.jpg
-single-molecule-plots.jpg
-    edit-factor.jpg
-import-data.jpg
-pairwise-test.jpg
-    edit-project.jpg
-linear-regression.jpg
-pca-2d.jpg
-  logarithm-transform.jpg
-pca-3d.jpg
-
--->
+	  <div class="item">
+	    <img src="img/logarithm-transform.jpg">
+            <div class="carousel-caption">
+	      <h3>Logarithmic transformation</h3>
+            </div>
+	  </div>
 
 	</div>
 
