--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -92,6 +92,8 @@
 	  <li data-target="#myCarousel" data-slide-to="19"></li>
 	  <li data-target="#myCarousel" data-slide-to="20"></li>
 	  <li data-target="#myCarousel" data-slide-to="21"></li>
+	  <li data-target="#myCarousel" data-slide-to="22"></li>
+	  <li data-target="#myCarousel" data-slide-to="23"></li>
 	</ol>
 
 	<!-- Wrapper for slides -->
@@ -238,7 +240,21 @@
 	  </div>
 
 	  <div class="item">
-	    <img src="img/pca-3d.jpg">
+	    <img src="img/pca-3d-1.jpg">
+            <div class="carousel-caption">
+	      <h3>3D principal componenent analysis</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/pca-3d-2.jpg">
+            <div class="carousel-caption">
+	      <h3>3D principal componenent analysis</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/pca-3d-3.jpg">
             <div class="carousel-caption">
 	      <h3>3D principal componenent analysis</h3>
             </div>
