--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,10 @@
 <article>
 	<section>
 		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
-Figure of iphone with app.
-Available n the app store.
+
+		<img class="iphone-framed" src="/img/iphone-framed-screenshot-2.jpg">
+		<img class="iphone-framed" src="/img/ipad-framed-screenshot.jpg">
+
 	</section>
 
 	<section>
