--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -94,6 +94,8 @@
 	  <li data-target="#myCarousel" data-slide-to="21"></li>
 	  <li data-target="#myCarousel" data-slide-to="22"></li>
 	  <li data-target="#myCarousel" data-slide-to="23"></li>
+	  <li data-target="#myCarousel" data-slide-to="24"></li>
+	  <li data-target="#myCarousel" data-slide-to="25"></li>
 	</ol>
 
 	<!-- Wrapper for slides -->
@@ -103,6 +105,20 @@
             <img src="img/navigation.png">
             <div class="carousel-caption">
               <h3>Navigation</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/single-molecule-plots-1.jpg">
+            <div class="carousel-caption">
+	      <h3>Single molecule plots</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/pca-3d-1.jpg">
+            <div class="carousel-caption">
+	      <h3>3D principal componenent analysis</h3>
             </div>
 	  </div>
 
@@ -142,6 +158,13 @@
 	  </div>
 
 	  <div class="item">
+	    <img src="img/single-molecule-plots-2.jpg">
+            <div class="carousel-caption">
+	      <h3>Single molecule plots</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
 	    <img src="img/missing-values.jpg">
             <div class="carousel-caption">
 	      <h3>Missing values</h3>
@@ -159,6 +182,13 @@
 	    <img src="img/data-set-summary.jpg">
             <div class="carousel-caption">
 	      <h3>Data set summary</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/pca-3d-2.jpg">
+            <div class="carousel-caption">
+	      <h3>3D principal componenent analysis</h3>
             </div>
 	  </div>
 
@@ -184,6 +214,13 @@
 	  </div>
 
 	  <div class="item">
+	    <img src="img/pca-2d.jpg">
+            <div class="carousel-caption">
+	      <h3>2D principal componenent analysis</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
 	    <img src="img/data-set-table.jpg">
             <div class="carousel-caption">
 	      <h3>Data set table</h3>
@@ -201,13 +238,6 @@
 	    <img src="img/paired-test-plot.jpg">
             <div class="carousel-caption">
 	      <h3>Paired test plot</h3>
-            </div>
-	  </div>
-
-	  <div class="item">
-	    <img src="img/single-molecule-plots.jpg">
-            <div class="carousel-caption">
-	      <h3>Single molecule plots</h3>
             </div>
 	  </div>
 
@@ -233,27 +263,6 @@
 	  </div>
 
 	  <div class="item">
-	    <img src="img/pca-2d.jpg">
-            <div class="carousel-caption">
-	      <h3>2D principal componenent analysis</h3>
-            </div>
-	  </div>
-
-	  <div class="item">
-	    <img src="img/pca-3d-1.jpg">
-            <div class="carousel-caption">
-	      <h3>3D principal componenent analysis</h3>
-            </div>
-	  </div>
-
-	  <div class="item">
-	    <img src="img/pca-3d-2.jpg">
-            <div class="carousel-caption">
-	      <h3>3D principal componenent analysis</h3>
-            </div>
-	  </div>
-
-	  <div class="item">
 	    <img src="img/pca-3d-3.jpg">
             <div class="carousel-caption">
 	      <h3>3D principal componenent analysis</h3>
@@ -264,6 +273,13 @@
 	    <img src="img/logarithm-transform.jpg">
             <div class="carousel-caption">
 	      <h3>Logarithmic transformation</h3>
+            </div>
+	  </div>
+
+	  <div class="item">
+	    <img src="img/result-files.jpg">
+            <div class="carousel-caption">
+	      <h3>Result files</h3>
             </div>
 	  </div>
 
