--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,9 @@
 	<section>
 		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
 
-		<img class="iphone-framed" src="/img/iphone-framed-screenshot-2.jpg">
-		<img class="iphone-framed" src="/img/ipad-framed-screenshot.jpg">
+
+		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
+		<img class="iphone-framed-1" src="/img/iphone-framed-screenshot-1.jpg">
 
 	</section>
 
