--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,14 @@
 	<section>
 		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
 
-
 		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
 		<img class="iphone-framed-1" src="/img/iphone-framed-screenshot-1.jpg">
 
+	</section>
+
+	<section>
+		<h1>Availability</h1>
+		<p class="tagline">The app is available for iphones and ipads with ios8 or newer.</p>
 	</section>
 
 	<section>
