--- a/public/index.html
+++ b/public/index.html
@@ -60,10 +60,8 @@
 <article>
 	<section>
 		<h1>The Amberbio app for mobile analysis and visualization of biological data sets</h1>
-
-		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
 		<img class="iphone-framed-1" src="/img/iphone-framed-screenshot-1.jpg">
-
+		<img class="iphone-framed-2" src="/img/iphone-framed-screenshot-2.jpg">
 	</section>
 
 	<section>
@@ -73,8 +71,8 @@
 
 	<section>
 		<h1>Price</h1>
-		<p class="tagline">The app is a paid app with no extra costs. Future updates are free. The app can be installed on all devices with the same Apple id.</p>
-		<p class="tagline">The price is subject to change. The current price is approximately with small country to country variations.</p>
+		<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free. The purchased app can be freely installed on other devices with the same Apple id.</p>
+		<p class="tagline">The price is subject to change. The current price is approximately.</p>
 	</section>
 
 	<section id="features">
