--- a/public/consulting.html
+++ b/public/consulting.html
@@ -59,7 +59,7 @@
 
 <article>
 	<section>
-		<h1>Amber biosciences offers consulting services in bioinformatics and biostatistics.</h1>
+		<h1>Amber Biosciences offers consulting services in bioinformatics and bio-statistics.</h1>
 		<p class="tagline">We work interactively with our customers and take part in their research projects.</p>
 		<p class="tagline">Contact us either at <a href="mailto:info@amberbio.com">info@amberbio.com</a> or personally.</p>
 		<p class="tagline">Contact information can be found at <a href="/#contact">Contact</a>.</p>
@@ -77,7 +77,7 @@
 		<div class="column">
 			<h2>How we work</h2>
 			<div>
-				We work interactively with our customers and try to listen to their needs. The usual procedure is that we have an initial meeting where we discuss the project. After agreeing on a contract, we perform part of the analysis, discuess with the customer, and continue analysing untill we reach a final result.
+				We work interactively with our customers and try to listen to their needs. The usual procedure is that we have an initial meeting where we discuss the project. After agreeing on a contract, we perform the analysis in close contact with the customer. Our work is done when there is agreement that a final result has been achieved.
 			</div>
 		</div>
 
@@ -94,7 +94,7 @@
 
 		<div class="column">
 			<h2>Sequencing</h2>
-			We can take raw sequencing data and preprocess it into a format for further analysis. Sequencing data can be used for gene expression as well as an alternative to microarrays.
+			We can take raw sequencing data and pre-process it into a format for further analysis. Sequencing data can be used for gene expression as well as an alternative to microarrays.
 		</div>
 
 		<div class="column">
@@ -118,8 +118,8 @@
 		</div>
 
 		<div class="column">
-			<h2>Preprocessing</h2>
-			Most data requires preprocessing and quality control. We can perform such processing when necessary.
+			<h2>Pre-processing</h2>
+			Most data requires pre-processing and quality control. We can perform such processing when necessary.
 		</div>
 	
 		<div class="column">
