--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
 	<section>
 		<h1>Availability</h1>
-		<p class="tagline">The app is available for iphones and ipads with ios8 or newer.</p>
+		<p class="tagline">The app is available for iPhone and iPad with ios8 or newer.</p>
 	</section>
 
 	<section>
@@ -99,7 +99,7 @@
 
 		<div class="column">
 			<h2>Import</h2>
-			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as Icloud, Dropbox or Box.
+			New data sets can be imported from tab, or comma, separated files. Files can be imported through email, or through cloud storage providers such as iCloud, Dropbox or Box.
 		</div>
 
 		<div class="column">
@@ -124,12 +124,12 @@
 	
 		<div class="column">
 			<h2>Unsupervised classification</h2>
- 			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heatmaps. Various options can be chosen interactrively.
+ 			The app can perform 2D and 3D principal component analysis, hierarchical clustering, and heat maps. Various options can be chosen interactively.
 		</div>
 
 		<div class="column">
 			<h2>Creation of new data sets</h2>
-			The app can produce new derived data sets by normalization, logarithmic transformation, sample removel, molecule removal, or selection of molecules from a table.
+			The app can produce new derived data sets by normalization, logarithmic transformation, sample removal, molecule removal, or selection of molecules from a table.
 		</div>
 		
 		<div class="column">
@@ -149,7 +149,7 @@
 		
 		<div class="column">
 			<h2>Screen shots</h2>
-			Screen shots of the app showing the above metioned features among others can be found on <a href="/screen-shots">screen shots</a>.
+			Screen shots of the app showing the above mentioned features among others can be found on <a href="/screen-shots">screen shots</a>.
 		</div>
 	</section>
 
@@ -158,7 +158,7 @@
 		<p class="tagline">The Amberbio app respects user privacy.</p>  
 		<p class="tagline">No data is sent to  server.</p>
 		<p class="tagline">All analysis is performed locally on the device.</p>
-		<p class="tagline">There are no user names and logins.</p>
+		<p class="tagline">There are no user names and log in.</p>
 	</section>
 	<section id="support">
 		<h1>Support</h1>
@@ -178,34 +178,34 @@
 		<div class="column">
 			<h2>Amberbio app</h2>
 			<div>
-				Amber biosciences has developed the Amberbio app for analysis and visualization of data sets.
+				Amber Biosciences has developed the Amberbio app for analysis and visualization of data sets.
 			</div>
 		</div>
 		<div class="column">
 			<h2>Bioinformatics consulting</h2>
 			<div>
-				Amber biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
-				Amber biosciences was founded in 2008 as a bioinformatics consulting company by reseachers from Lund University.
+				Amber Biosciences performs bioinformatics consulting with customers from both academia and the biotech sector.<br><br>
+				Amber Biosciences was founded in 2008 as a bioinformatics consulting company by researchers from Lund University.
 			</div>
 		</div>
 		<div class="column">
 			<h2>Writeurl</h2>
 			<div>
-				Amber biosciences has developed writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
-				Writeurl is available at <a href="http://www.writeurl.com">writeurl</a>.
+				Amber Biosciences has developed Writeurl which is an online collaborative editor used by people all over the world to write documents.<br><br>
+				Writeurl is available at <a href="http://www.writeurl.com">Writeurl</a>.
 			</div>
 		</div>
 		<div class="column">
 			<h2>Nosybee</h2>
 			<div>
-				Amber biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
-				Nosybee is available at <a href="http://www.nosybee.com">nosybee</a>.
+				Amber Biosciences has developed Nosybee which is a web application used to conduct and analyze surveys.<br><br>
+				Nosybee is available at <a href="http://www.nosybee.com">Nosybee</a>.
 			</div>
 		</div>
 		<div class="column">
 			<h2>Who we are</h2>
 			<div>
-				Amber biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt in Lund, Sweden. Later, Elias Moberger joined.<br><br>
+				Amber Biosciences was founded by Morten Krogh, Björn Canbäck, and Ann-Sofie Albrekt in Lund, Sweden. Later, Elias Moberger joined.<br><br>
 				We have a background in programming, bioinformatics, physics, biology, mathematics and statistics.
 			</div>
 		</div>
