--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -118,7 +118,7 @@
 	  <div class="item">
 	    <img src="img/pca-3d-1.jpg">
             <div class="carousel-caption">
-	      <h3>3D principal componenent analysis</h3>
+	      <h3>3D principal component analysis</h3>
             </div>
 	  </div>
 
@@ -188,7 +188,7 @@
 	  <div class="item">
 	    <img src="img/pca-3d-2.jpg">
             <div class="carousel-caption">
-	      <h3>3D principal componenent analysis</h3>
+	      <h3>3D principal component analysis</h3>
             </div>
 	  </div>
 
@@ -216,7 +216,7 @@
 	  <div class="item">
 	    <img src="img/pca-2d.jpg">
             <div class="carousel-caption">
-	      <h3>2D principal componenent analysis</h3>
+	      <h3>2D principal component analysis</h3>
             </div>
 	  </div>
 
@@ -265,7 +265,7 @@
 	  <div class="item">
 	    <img src="img/pca-3d-3.jpg">
             <div class="carousel-caption">
-	      <h3>3D principal componenent analysis</h3>
+	      <h3>3D principal component analysis</h3>
             </div>
 	  </div>
 
