--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
 	<section>
 		<h1>Availability</h1>
-		<p class="tagline">The app is available for iPhone and iPad with ios8 or newer.</p>
+		<p class="tagline">The app will soon be available for iPhone and iPad with ios8 or newer.</p>
 	</section>
 
 	<section>
