--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -102,7 +102,7 @@
 	<div class="carousel-inner" role="listbox">
 
 	  <div class="item active">
-            <img src="img/navigation.png">
+            <img src="img/navigation.jpg">
             <div class="carousel-caption">
               <h3>Navigation</h3>
             </div>
