--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Nosy Bee provides web surveys, statistical analysis och result reports.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Amberbio</title>
-	<link rel="shortcut icon" href="/img/favicon.png">
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="stylesheet" href="css/index.css" type="text/css">
 	<script>
 	document.createElement('header');
