--- a/public/manual.html
+++ b/public/manual.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="table-of-content-link">
-      <a href="#user-name-and-emails">User name and emails</a>
+      <a href="#name-and-emails">Name and emails</a>
     </div>
 
     <div class="table-of-content-link">
